# Sphragis

./: .gitignore  ANTI_FEATURES.md  BROWSER.md  CHROMIUM_PORT_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  DESIGN.md  DESIGN_AI_AGENT.md  DESIGN_AUDIT_WORM.md  DESIGN_BATCAVES.md  DESIGN_BROWSER.md  DESIGN_CAVES.md  DESIGN_CAVE_ISOLATION.md  DESIGN_CHERI_MAPPING.md  DESIGN_CHROMIUM.md  DESIGN_CRYPTO.md  DESIGN_FUTEX_DEADLINE_UNIFICATION.md  DESIGN_HSM_OPERATOR_CA.md  DESIGN_LMS_KERNEL_SIGNING.md  DESIGN_NO_BROWSER.md  DESIGN_PACKET_PIPELINE.md  DESIGN_PRODUCTIZATION_UX.md  DESIGN_SCHEDULER_BLOCK_ON.md  DESIGN_SIGSTORE_REKOR.md  DESIGN_SLSA_PROVENANCE.md  DESIGN_SYS_CAVES.md  DESIGN_TLS_HARDENING.md  DESIGN_TLS_PQ_FIX.md  DESIGN_X86_64_PORT.md  LICENSE  LICENSE-COMMERCIAL.md  Makefile  NOTICE  ONBOARDING.md  QUICKSTART.md  README.md  UBUNTU_QUICKSTART.md  VERIFICATION_BOUNDARY.md  (+14 more)
.cargo/: config.toml
.github-workflows-pending/: intoto-attest.yml  release-sign.yml  sbom-publish.yml  syscall-policy-lint.yml
attestations/: gen_sbom.intoto.json  repro_build.intoto.json  sign_release.intoto.json
boot_chain/: deploy.sh  deploy_v2.sh  install.sh  path_a.sh
docs/: 2026-04-19_batos_hv_cpuid_sha256.txt  2026-04-19_batos_hv_full_demo.txt  2026-04-19_batos_hv_interactive_help_session_extracted.txt  2026-04-19_batos_hv_multicmd_session.txt  2026-04-19_batos_under_hv_ttyACM2_boot_log.txt  2026-04-20_batos_hv_crypto_ext_demo.txt  2026-04-20_batos_hv_rand_bench_demo.txt  2026-04-20_batos_hv_rng_features.txt  2026-04-20_batos_hv_self_test.txt  2026-04-20_batos_hv_sha_hw_probe.txt  2026-04-20_hv_aic_ack_drain_wedged_21s.txt  2026-04-20_hv_aic_drain_plus_nudge_died_26s.txt  2026-04-20_hv_aop_minimal_wedged_33s.txt  2026-04-20_hv_control_notick_60s.txt  2026-04-20_hv_passthrough_buffered_20s.txt  2026-04-20_hv_passthrough_disabled_16s.txt  2026-04-20_hv_post_aic_revert_43s.txt  2026-04-20_hv_post_revert_27s_outlier.txt  2026-04-20_hv_post_revert_94s.txt  2026-04-20_hv_smc_init_leak_79s.txt  2026-04-20_hv_smc_nudge_died_1s.txt  2026-04-20_hv_smcpet_default_87s.txt  2026-04-20_hv_smcpet_toggled_95s.txt  2026-04-20_hv_smcprobe_EL1_OK.txt  2026-04-20_hv_supervisor_cycle1_73s.txt  2026-04-20_hv_tick_endurance_86s.txt  2026-04-20_hv_txring_batched_83s.txt  2026-04-20_hv_wdt_probe_96s.txt  2026-04-20_m4_adt_watchdog_scan.txt  2026-04-20_m4_apsc_write_crashes.txt  2026-04-20_m4_m3chickens_crash.txt  2026-04-20_m4_wdt_register_rates.txt  ARCHITECTURE.md  CAPABILITY_STATEMENT_v0.md  CAPTURES_AUDIT.md  DEBUGGING_RUNBOOK.md  DISCLOSURE_POSTURE.md  FIPS_140_3_MODULE_BOUNDARY.md  HANDOFF_KEYBOARD_INPUT.md  HANDOFF_PROMPT.md  (+25 more)
evals/: bat_os_evals.jsonl  rag.py  run_evals.py  sphragis_evals.jsonl  tools.py
fonts/: README.md
include/:  file not found  assert.h  ctype.h  dirent.h  dlfcn.h  endian.h  errno.h  execinfo.h  fcntl.h  features.h  iconv.h  inttypes.h  jpeglib.h  libnsbmp.h  librosprite.h  limits.h  locale.h  malloc.h  math.h  nsgif.h  png.h  pthread.h  regex.h  semaphore.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  svgtiny.h  testament.h  time.h  unistd.h  wchar.h  zlib.h
keys/: .gitignore  README.md
macos_dump/: README.md
marketing-site/: index.html
marketing-site-scaffold/: README.md
ports/: PORTING_NOTES.md  blink_bridge.cpp  blink_printf.c  blink_stubs.cpp  blink_test.cpp  blink_tokenizer_test.cpp  build_skia.sh  css_bridge.cpp  css_stubs.c  css_test_stubs.cpp  css_tokenizer_test.cpp  cxx_test.cpp  cxxrt.c  display_test.cpp  freetype_test.c  libblink.a.bak  libc.c  math_asm.S  math_impl.c  mmap_test.c  netsurf_css_test.c  netsurf_html_css_test.c  netsurf_main.c  netsurf_render_test.c  png_test.c  posix_test.c  skia_render_test.cpp  skia_stubs.cpp  skia_test.cpp  v8_exec.cpp  v8_test.cpp
rekor/: log  sth
scripts/: audit_canaries.sh  audit_captures.py  audit_syscall_policy.py  autopilot.sh  batcave_docker_demo.py  batcaved.py  batcaved_cpol_unit.py  batcaved_enforce_unit.py  batcaved_install_unit.py  browser_proxy.py  build_intoto_attestation.py  build_lora_dataset.py  build_lora_dataset_v2.py  build_lora_dataset_v3.py  build_rag_corpus.py  capture_screen.sh  capture_serial.sh  chainload.sh  chat_with_v3.py  check_dependencies.py  check_reproducible_build.sh  comms_test_server.py  cve_audit.py  deploy_chatterbox.sh  dump_dom.py  fix-udev.sh  gen_ocsp_fixture.py  gen_sbom.py  gen_sigma_bitmap.py  gen_x509_test_chains.py  generate_sbom.py  host_clipboard_bridge.py  install-sudoers.sh  install_hooks.sh  intoto_attest.py  lint.sh  merge_lora_to_gguf.sh  merge_lora_v2.sh  merge_lora_v3.sh  mouse_bridge.py  (+122 more)
security/: PENTEST_CRYPTO_AUTH.md  PENTEST_CRYPTO_AUTH_V2.md  PENTEST_DOS.md  PENTEST_DOS_V2.md  PENTEST_FS_LOADER.md  PENTEST_FS_LOADER_V2.md  PENTEST_KERNEL_MEMORY.md  PENTEST_KERNEL_MEMORY_V2.md  PENTEST_NETWORK.md  PENTEST_NETWORK_V2.md  PENTEST_SANDBOX_ESCAPE.md  PENTEST_SANDBOX_ESCAPE_V2.md  PENTEST_SUMMARY.md  PENTEST_SYSCALLS.md  PENTEST_SYSCALLS_V2.md  PENTEST_V2_CONSOLIDATED.md  PENTEST_V2_FIX_SUMMARY.md  PENTEST_V3_FIX_SUMMARY.md  PENTEST_V4_FIX_SUMMARY.md  PENTEST_V5_CHAINS.md  PENTEST_V5_CRYPTO.md  PENTEST_V5_FIX_SUMMARY.md  PENTEST_V5_KMEM.md  PENTEST_V5_PARSER.md  PENTEST_V5_SIDECHAN.md  PENTEST_V5_SUPPLY.md  PENTEST_V5_TOCTOU.md  PENTEST_V5_WEIRD.md  PENTEST_V5_XLAYER.md  PENTEST_V6_CHAINS.md  PENTEST_V6_CRYPTO.md  PENTEST_V6_FIX_SUMMARY.md  PENTEST_V6_KMEM.md  PENTEST_V6_PARSER.md  PENTEST_V6_SIDECHAN.md  PENTEST_V6_SUPPLY.md  PENTEST_V6_TOCTOU.md  PENTEST_V6_WEIRD.md  PENTEST_V6_XLAYER.md  PENTEST_V7_CHAINS.md  (+33 more)
security/tests/km/: Cargo.toml  frame_alloc_race.rs  frame_double_free.rs  futex_hash_collisions.rs  futex_uaddr_overflow.rs  heap_start_overflow.rs  lib.rs  ptflags_missing_uxn.rs  run_qemu_attacks.sh  savedframe_size_mismatch.rs
security/tests/km/.cargo/: config.toml
src/: main.rs  platform.rs
test_binaries/: hello.s  hello_batcave.elf  make_test_elf.py  make_uname_test.py  uname_test.elf
tests/: blink_test  blink_tokenizer_test  css_tokenizer_test  cxx_test  freetype_test  hello  hello.c  (+14 more)
(+1490 files in other folders)
