[package]
name = "bat_os"
version = "0.1.0"
edition = "2024"

[features]
# Layer-B synthetic test: QEMU kernel entry builds a fake m1n1 BootArgsRaw
# + minimal ADT in static memory, then runs the Apple-path parser code
# against it. Validates boot_args::parse, soc::discover_from_adt, and
# the ADT parser on real M4 silicon without needing m1n1 installed.
layer-b-test = []

[dependencies]
# ROOT-4 crypto replacement — RustCrypto audited primitives.
# All no_std-compatible, no heap needed with default-features=false.
aes   = { version = "0.8", default-features = false }
ghash = { version = "0.5", default-features = false }
# V3 hardening: ed25519 verify for the initrd signature (FLv2-NEW-010)
# and p256 ECDSA verify for the X.509 chain (NEW-CRYPTO-010 / NET2-001).
# Both no_std with alloc-free verify paths.
ed25519-compact = { version = "2", default-features = false }
p256  = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2  = { version = "0.10", default-features = false }
# V4: full X.509 chain validation + heap allocator.
x509-cert = { version = "0.2", default-features = false, features = ["pem"] }
const-oid = { version = "0.9", default-features = false }
spki = { version = "0.7", default-features = false, features = ["alloc"] }
der = { version = "0.7", default-features = false, features = ["alloc"] }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }

[profile.dev]
panic = "abort"
overflow-checks = true        # V8-ROOT-3 / V8-SUPPLY-2: catch unchecked arithmetic

[profile.release]
panic = "abort"
opt-level = 2
lto = true
codegen-units = 1             # V8-SUPPLY-2: deterministic builds
overflow-checks = true        # V8-ROOT-3: keep the panic-on-wrap in release
debug = false                 # V8-SUPPLY-7: do not ship debug info
strip = true                  # V8-SUPPLY-7: do not ship symbols
