[package]
name = "bat_os"
version = "0.1.0"
edition = "2024"

[features]
# Layer-B synthetic test: QEMU kernel entry builds a fake m1n1 BootArgsRaw
# + minimal ADT in static memory, then runs the Apple-path parser code
# against it. Validates boot_args::parse, soc::discover_from_adt, and
# the ADT parser on real M4 silicon without needing m1n1 installed.
layer-b-test = []

# Use GICv3 (system registers + redistributor) instead of GICv2 (CPU
# interface MMIO). Required for HVF acceleration on macOS/Apple Silicon
# host. Enable with `cargo build --release --features gicv3` and the
# matching `qemu -machine virt,gic-version=3` (and optionally
# `--accel hvf -cpu host` for native speed).
gicv3 = []

[dependencies]
# ROOT-4 crypto replacement — RustCrypto audited primitives.
# All no_std-compatible, no heap needed with default-features=false.
aes   = { version = "0.8", default-features = false }
ghash = { version = "0.5", default-features = false }
# V3 hardening: ed25519 verify for the initrd signature (FLv2-NEW-010)
# and p256 ECDSA verify for the X.509 chain (NEW-CRYPTO-010 / NET2-001).
# Both no_std with alloc-free verify paths.
ed25519-compact = { version = "2", default-features = false }
p256  = { version = "0.13", default-features = false, features = ["ecdsa"] }
# STUMP #140: ECDSA P-384 verify for chains anchored under P-384 roots
# (ISRG Root X2, etc.) and TLS-1.3 ecdsa_secp384r1_sha384 (0x0503).
p384  = { version = "0.13", default-features = false, features = ["ecdsa"] }
# STUMP #140: RSA PKCS#1 v1.5 + RSA-PSS verify for chains anchored under
# RSA roots (most legacy public CAs) and TLS-1.3 rsa_pss_rsae_*. Without
# this, three of the five embedded trust anchors (Amazon, DigiCert
# Global Root CA, DigiCert Global Root G2) can only validate ECDSA-leaf
# chains.
rsa   = { version = "0.9", default-features = false, features = ["sha2"] }
sha2  = { version = "0.10", default-features = false }
# V4: full X.509 chain validation + heap allocator.
x509-cert = { version = "0.2", default-features = false, features = ["pem"] }
const-oid = { version = "0.9", default-features = false }
spki = { version = "0.7", default-features = false, features = ["alloc"] }
der = { version = "0.7", default-features = false, features = ["alloc"] }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
# DESIGN_CRYPTO.md priority #1: memory-hard passphrase KDF.
# Replaces our N-round SHA-256 path, which is trivially parallelizable
# on GPUs/ASICs. Argon2id forces attackers to burn memory per guess.
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
# DESIGN_CRYPTO.md priority #4 + daemon audit pairing: ChaCha20-Poly1305
# AEAD for BatFS file encryption. Replaces AES-256-CTR + HMAC-SHA256
# (encrypt-then-MAC) with a single AEAD primitive: one pass,
# constant-time by design, no timing side channels on the key.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
# DESIGN_CRYPTO.md priority #5 + #6: post-quantum KEM + signatures.
# Hybrid construction — X25519 || ML-KEM-768 for key agreement,
# Ed25519 || ML-DSA-65 for signatures — gives us classical security
# today plus PQ security against future CRQC "store now, decrypt later"
# attacks. Both NIST FIPS-203 / FIPS-204 standardized August 2024.
ml-kem = { version = "0.2", default-features = false }
ml-dsa = { version = "0.1.0-rc.8", default-features = false, features = ["rand_core"] }
hybrid-array = { version = "0.4", default-features = false }
# X25519 classical key agreement for the classical half of the hybrid.
# Our current TLS stack constructs X25519 by hand against p256; moving
# to the dedicated crate gives us clean interop.
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
rand_core = { version = "0.6", default-features = false }

[profile.dev]
panic = "abort"
overflow-checks = true        # V8-ROOT-3 / V8-SUPPLY-2: catch unchecked arithmetic

[profile.release]
panic = "abort"
opt-level = 2
lto = true
codegen-units = 1             # V8-SUPPLY-2: deterministic builds
overflow-checks = true        # V8-ROOT-3: keep the panic-on-wrap in release
debug = false                 # V8-SUPPLY-7: do not ship debug info
strip = true                  # V8-SUPPLY-7: do not ship symbols
