[package]
name = "sphragis"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Security-first bare-metal Rust microkernel for Apple Silicon"
repository = "https://github.com/kadenlee1107/Sphragis"
readme = "README.md"

[features]
# Layer-B synthetic test: QEMU kernel entry builds a fake m1n1 BootArgsRaw
# + minimal ADT in static memory, then runs the Apple-path parser code
# against it. Validates boot_args::parse, soc::discover_from_adt, and
# the ADT parser on real M4 silicon without needing m1n1 installed.
layer-b-test = []

# Use GICv3 (system registers + redistributor) instead of GICv2 (CPU
# interface MMIO). Required for HVF acceleration on macOS/Apple Silicon
# host. Enable with `cargo build --release --features gicv3` and the
# matching `qemu -machine virt,gic-version=3` (and optionally
# `--accel hvf -cpu host` for native speed).
gicv3 = []

# Run the X.509 chain validator selftest after net init, before the
# auth gate, printing the same `[x509-selftest] PASS/FAIL` lines the
# `x509-selftest` shell command produces. Lets a headless QEMU smoke
# (scripts/qemu_x509_smoke.py) verify the verifier on every build
# without needing virtio-keyboard injection. Narrow scope on purpose
# — when more selftests want headless validation, this gets
# generalized into a real harness. See DESIGN_TLS_HARDENING.md.
selftest-on-boot = []

# Drive a real TLS 1.3 + X25519MLKEM768 hybrid PQ handshake against
# pq.cloudflareresearch.com after net init, before the auth gate.
# Prints `[pq-interop] PASS` / `FAIL <reason>` so a headless QEMU smoke
# (scripts/qemu_pq_interop_smoke.py) can verify our hybrid PQ
# implementation interops with a real third-party server. Used to prove
# the IETF draft-ietf-tls-ecdhe-mlkem-04 wire layout fix end-to-end —
# closed-loop selftests can't catch wire-format regressions if both
# sides run the same code.
pq-interop-test = []

# Drive a real end-to-end HTTPS request via the kernel-mediated HTTPS
# path (https::open_kernel + read + write) after net init, before the
# auth gate. Prints `[https-smoke] PASS` / `FAIL <reason>` so a
# headless QEMU smoke (scripts/qemu_https_smoke.py) can verify the
# full request/response loop, not just the TLS handshake (which the
# pq-interop-test feature already covers). See DESIGN_HTTPS_SYSCALL.md.
https-smoke-test = []

[dependencies]
# ROOT-4 crypto replacement — RustCrypto audited primitives.
# All no_std-compatible, no heap needed with default-features=false.
aes   = { version = "0.8", default-features = false }
ghash = { version = "0.5", default-features = false }
# V3 hardening: ed25519 verify for the initrd signature (FLv2-NEW-010)
# and p256 ECDSA verify for the X.509 chain (NEW-CRYPTO-010 / NET2-001).
# Both no_std with alloc-free verify paths.
ed25519-compact = { version = "2", default-features = false }
p256  = { version = "0.13", default-features = false, features = ["ecdsa"] }
# STUMP #140: ECDSA P-384 verify for chains anchored under P-384 roots
# (ISRG Root X2, etc.) and TLS-1.3 ecdsa_secp384r1_sha384 (0x0503).
p384  = { version = "0.13", default-features = false, features = ["ecdsa"] }
# STUMP #140: RSA PKCS#1 v1.5 + RSA-PSS verify for chains anchored under
# RSA roots (most legacy public CAs) and TLS-1.3 rsa_pss_rsae_*. Without
# this, three of the five embedded trust anchors (Amazon, DigiCert
# Global Root CA, DigiCert Global Root G2) can only validate ECDSA-leaf
# chains.
rsa   = { version = "0.9", default-features = false, features = ["sha2"] }
sha2  = { version = "0.10", default-features = false }
# V4: full X.509 chain validation + heap allocator.
x509-cert = { version = "0.2", default-features = false, features = ["pem"] }
const-oid = { version = "0.9", default-features = false }
spki = { version = "0.7", default-features = false, features = ["alloc"] }
der = { version = "0.7", default-features = false, features = ["alloc"] }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
# DESIGN_CRYPTO.md priority #1: memory-hard passphrase KDF.
# Replaces our N-round SHA-256 path, which is trivially parallelizable
# on GPUs/ASICs. Argon2id forces attackers to burn memory per guess.
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
# DESIGN_CRYPTO.md priority #4 + daemon audit pairing: ChaCha20-Poly1305
# AEAD for BatFS file encryption. Replaces AES-256-CTR + HMAC-SHA256
# (encrypt-then-MAC) with a single AEAD primitive: one pass,
# constant-time by design, no timing side channels on the key.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
# AUDIT-FS-C4 elite-tier (2026-05-16): misuse-resistant AEAD for
# BatFS at-rest encryption. AES-GCM-SIV defends against nonce reuse
# in a way plain AES-GCM and ChaCha20-Poly1305 do not — if a nonce
# IS reused (operator bug, RAM corruption flipping the stored
# prefix, etc.), authenticity holds and only the two reused-nonce
# plaintexts leak (not the keystream). RustCrypto crate, no_std-
# compatible with default-features off.
aes-gcm-siv = { version = "0.11", default-features = false, features = ["aes"] }
# DESIGN_CRYPTO.md priority #5 + #6: post-quantum KEM + signatures.
# Hybrid construction — X25519 || ML-KEM-768 for key agreement,
# Ed25519 || ML-DSA-65 for signatures — gives us classical security
# today plus PQ security against future CRQC "store now, decrypt later"
# attacks. Both NIST FIPS-203 / FIPS-204 standardized August 2024.
ml-kem = { version = "0.2", default-features = false }
ml-dsa = { version = "0.1.0-rc.8", default-features = false, features = ["rand_core"] }
hybrid-array = { version = "0.4", default-features = false }
# X25519 classical key agreement for the classical half of the hybrid.
# Our current TLS stack constructs X25519 by hand against p256; moving
# to the dedicated crate gives us clean interop.
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
rand_core = { version = "0.6", default-features = false }
# Cluster A — crypto agility surface (2026-05-10).
# SHA-3 family (FIPS 202) for use-cases the SHA-2 family doesn't cover
# (KMAC, SHAKE128/256 XOF, alternate hash for protocol that mandates it).
sha3 = { version = "0.10", default-features = false }
# BLAKE3 keyed/parallel hash. Much faster than SHA-256 on modern CPUs.
# Useful as a content-addressed identifier for the SBOM + RAG corpus,
# and as a high-throughput MAC alternative. `pure` disables the NEON
# C intrinsics path which can't link on aarch64-unknown-none (no libc
# headers for assert.h etc.); the pure-Rust path is still plenty fast.
blake3 = { version = "1.5", default-features = false, features = ["pure"] }
# BLAKE2s — WireGuard's spec-mandated hash. Different from BLAKE3 (variable
# output, different IV constants); we need both. RustCrypto's `blake2`
# crate is the canonical implementation.
blake2 = { version = "0.10", default-features = false }
# AES-XTS for block-level disk/sector encryption (BatFS extents and the
# eventual NVMe block layer). XTS is the standard for full-disk crypto;
# GCM is not appropriate for random-access blocks.
xts-mode = { version = "0.5", default-features = false }
# CMAC over AES-128/256 — needed for FIPS-validated approved-mode
# constructions and as a fallback MAC when HMAC-SHA2 isn't acceptable.
cmac = { version = "0.7", default-features = false }
x509-ocsp = { version = "0.2", default-features = false }
hbs-lms = { version = "0.1.1", default-features = false }

[profile.dev]
panic = "abort"
overflow-checks = true        # V8-ROOT-3 / V8-SUPPLY-2: catch unchecked arithmetic

[profile.release]
panic = "abort"
opt-level = 2
lto = true
codegen-units = 1             # V8-SUPPLY-2: deterministic builds
overflow-checks = true        # V8-ROOT-3: keep the panic-on-wrap in release
debug = false                 # V8-SUPPLY-7: do not ship debug info
strip = true                  # V8-SUPPLY-7: do not ship symbols

# Clippy lints. The kernel codebase has several idioms that clippy's
# default settings flag as noise. We allow the bulk-stylistic ones and
# leave the substantive lints active.
#
# - `needless_range_loop`: indexed iteration is often clearer in MMIO /
#   bytewise code where the index doubles as an offset.
# - `manual_range_contains`: `x >= a && x < b` reads better than
#   `(a..b).contains(&x)` for two-cap bounds checks.
# - `collapsible_if`: nested `if` lets you keep early-return guards
#   readable with one condition each.
# - `doc_lazy_continuation` / `doc_overindented_list_items`: cosmetic.
# - `identity_op`: sometimes used to spell out a bit-pattern (`x | 0`).
# - `manual_*` (div_ceil, saturating_arithmetic, checked_ops,
#   is_multiple_of): clippy wants stdlib variants; the manual
#   spellings are explicit and no-std-friendly.
# - `unnecessary_cast`: sometimes type inference wants the explicit
#   cast even where clippy can prove it's redundant.
# - `too_many_arguments`: syscall handlers take 6 args by ABI.
# - `declare_interior_mutable_const`: kernel patterns intentionally
#   share AtomicU64 / AtomicBool consts across the whole binary.
# - `implicit_saturating_sub`: short-form subtractions used in
#   bounded-arithmetic hot paths.
[lints.clippy]
# Core "kernel idiom doesn't match clippy's defaults" allows.
needless_range_loop = "allow"
manual_range_contains = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
identity_op = "allow"
manual_div_ceil = "allow"
manual_saturating_arithmetic = "allow"
manual_checked_ops = "allow"
manual_is_multiple_of = "allow"
manual_clamp = "allow"
manual_memcpy = "allow"
manual_find = "allow"
manual_pattern_char_comparison = "allow"
manual_is_ascii_check = "allow"
manual_unwrap_or_default = "allow"
manual_inspect = "allow"
unnecessary_cast = "allow"
unnecessary_map_or = "allow"
unnecessary_fallible_conversions = "allow"
needless_borrows_for_generic_args = "allow"
redundant_closure = "allow"
implicit_saturating_sub = "allow"
single_match = "allow"
vec_init_then_push = "allow"
op_ref = "allow"
fn_to_numeric_cast = "allow"
question_mark = "allow"
too_many_arguments = "allow"
declare_interior_mutable_const = "allow"

# Pure documentation / comment formatting.
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
